--- a/local/src_v6/core/util/svg/style.scss
+++ b/local/src_v6/core/util/svg/style.scss
@@ -167,6 +167,19 @@
   }
 }
 
+@mixin svg-menu-drop-8-arrow-white {
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%227%22%20viewBox%3D%220%200%2011%207%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1%201l4.5%204.504L10%201%22%20stroke%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E');
+  width: 11px;
+  height: 7px;
+}
+
+.svg-menu-drop-8-arrow-white {
+
+  &:before {
+    @include svg-menu-drop-8-arrow-white;
+  }
+}
+
 @mixin svg-menu-drop-8-arrow {
   background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%227%22%20viewBox%3D%220%200%2011%207%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1%201l4.5%204.504L10%201%22%20stroke%3D%22%23515855%22%2F%3E%3C%2Fsvg%3E');
   width: 11px;
@@ -177,6 +190,19 @@
 
   &:before {
     @include svg-menu-drop-8-arrow;
+  }
+}
+
+@mixin svg-head-links--cart-white {
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2214%22%20height%3D%2216%22%20viewBox%3D%220%200%2014%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M6.536.022a3.149%203.149%200%200%200-2.363%201.79c-.218.465-.308.906-.308%201.558v.542H2.799c-1.127%200-1.297.03-1.368.226C1.369%204.29-.023%2015.108%200%2015.213c.014.053.184.25.378.442L.73%2016h12.509l.25-.225c.294-.264.512-.528.512-.62%200-.138-1.42-10.95-1.45-11.027-.07-.187-.25-.216-1.368-.216h-1.066V3.37c0-.647-.09-1.093-.303-1.544C9.425.996%208.776.416%207.933.147%207.531.022%206.91-.035%206.536.022zm1.231.869c.38.13.692.34.976.657.46.508.616.969.616%201.798v.566H4.623v-.494c0-.268.033-.628.07-.796A2.462%202.462%200%200%201%206.452.82c.36-.091.947-.063%201.316.072zm4.12%203.918c.043.221%201.308%209.973%201.308%2010.093a.409.409%200%200%201-.104.22l-.1.11H.995l-.123-.134-.119-.13.678-5.132c.369-2.825.677-5.137.677-5.146.005-.005%202.197-.01%204.878-.01h4.873l.029.13z%22%20fill%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E');
+  width: 14px;
+  height: 16px;
+}
+
+.svg-head-links--cart-white {
+
+  &:before {
+    @include svg-head-links--cart-white;
   }
 }
 
@@ -193,6 +219,19 @@
   }
 }
 
+@mixin svg-head-links--favorites-white {
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2218%22%20height%3D%2216%22%20viewBox%3D%220%200%2018%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M15.766%202.238A4.21%204.21%200%200%200%2012.79%201%204.198%204.198%200%200%200%209.81%202.238L9%203.052l-.812-.814a4.204%204.204%200%200%200-5.955%200%204.231%204.231%200%200%200%200%205.974l.812.814L9%2015l5.955-5.974.811-.814A4.225%204.225%200%200%200%2017%205.225a4.237%204.237%200%200%200-1.234-2.987z%22%20stroke%3D%22%23fff%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E');
+  width: 18px;
+  height: 16px;
+}
+
+.svg-head-links--favorites-white {
+
+  &:before {
+    @include svg-head-links--favorites-white;
+  }
+}
+
 @mixin svg-head-links--favorites {
   background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2218%22%20height%3D%2216%22%20viewBox%3D%220%200%2018%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M15.766%202.238A4.21%204.21%200%200%200%2012.79%201%204.198%204.198%200%200%200%209.81%202.238L9%203.052l-.812-.814a4.204%204.204%200%200%200-5.955%200%204.231%204.231%200%200%200%200%205.974l.812.814L9%2015l5.955-5.974.811-.814A4.225%204.225%200%200%200%2017%205.225a4.237%204.237%200%200%200-1.234-2.987z%22%20stroke%3D%22%23515855%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E');
   width: 18px;
@@ -203,6 +242,19 @@
 
   &:before {
     @include svg-head-links--favorites;
+  }
+}
+
+@mixin svg-head-links--human-white {
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2215%22%20height%3D%2217%22%20viewBox%3D%220%200%2015%2017%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M7.499%208.444c-3.994%200-7.244%203.25-7.244%207.244a.387.387%200%200%200%20.773%200A6.478%206.478%200%200%201%207.5%209.218a6.478%206.478%200%200%201%206.47%206.47.387.387%200%200%200%20.774%200c0-3.995-3.25-7.244-7.244-7.244zM7.499.925a3.508%203.508%200%200%200-3.504%203.504A3.508%203.508%200%200%200%207.5%207.932a3.508%203.508%200%200%200%203.504-3.503A3.508%203.508%200%200%200%207.499.925zm0%206.234a2.734%202.734%200%200%201-2.73-2.73%202.734%202.734%200%200%201%202.73-2.73%202.734%202.734%200%200%201%202.73%202.73%202.734%202.734%200%200%201-2.73%202.73z%22%20fill%3D%22%23fff%22%20stroke%3D%22%23fff%22%20stroke-width%3D%22.15%22%2F%3E%3C%2Fsvg%3E');
+  width: 15px;
+  height: 17px;
+}
+
+.svg-head-links--human-white {
+
+  &:before {
+    @include svg-head-links--human-white;
   }
 }
 
@@ -219,6 +271,19 @@
   }
 }
 
+@mixin svg-head-links--search-white {
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2217%22%20height%3D%2217%22%20viewBox%3D%220%200%2017%2017%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M11.472%2011l5.028%205M13%207A6%206%200%201%201%201%207a6%206%200%200%201%2012%200z%22%20stroke%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E');
+  width: 17px;
+  height: 17px;
+}
+
+.svg-head-links--search-white {
+
+  &:before {
+    @include svg-head-links--search-white;
+  }
+}
+
 @mixin svg-head-links--search {
   background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2217%22%20height%3D%2217%22%20viewBox%3D%220%200%2017%2017%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M11.472%2011l5.028%205M13%207A6%206%200%201%201%201%207a6%206%200%200%201%2012%200z%22%20stroke%3D%22%23515855%22%2F%3E%3C%2Fsvg%3E');
   width: 17px;
@@ -232,6 +297,19 @@
   }
 }
 
+@mixin svg-search-head-5-white {
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2217%22%20height%3D%2217%22%20viewBox%3D%220%200%2017%2017%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M11.472%2011l5.028%205M13%207A6%206%200%201%201%201%207a6%206%200%200%201%2012%200z%22%20stroke%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E');
+  width: 17px;
+  height: 17px;
+}
+
+.svg-search-head-5-white {
+
+  &:before {
+    @include svg-search-head-5-white;
+  }
+}
+
 @mixin svg-search-head-5 {
   background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2217%22%20height%3D%2217%22%20viewBox%3D%220%200%2017%2017%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M11.472%2011l5.028%205M13%207A6%206%200%201%201%201%207a6%206%200%200%201%2012%200z%22%20stroke%3D%22%23515855%22%2F%3E%3C%2Fsvg%3E');
   width: 17px;
@@ -242,6 +320,19 @@
 
   &:before {
     @include svg-search-head-5;
+  }
+}
+
+@mixin svg-head-cart-white {
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2214%22%20height%3D%2216%22%20viewBox%3D%220%200%2014%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M6.536.022a3.149%203.149%200%200%200-2.363%201.79c-.218.465-.308.906-.308%201.558v.542H2.799c-1.127%200-1.297.03-1.368.226C1.369%204.29-.023%2015.108%200%2015.213c.014.053.184.25.378.442L.73%2016h12.509l.25-.225c.294-.264.512-.528.512-.62%200-.138-1.42-10.95-1.45-11.027-.07-.187-.25-.216-1.368-.216h-1.066V3.37c0-.647-.09-1.093-.303-1.544C9.425.996%208.776.416%207.933.147%207.531.022%206.91-.035%206.536.022zm1.231.869c.38.13.692.34.976.657.46.508.616.969.616%201.798v.566H4.623v-.494c0-.268.033-.628.07-.796A2.462%202.462%200%200%201%206.452.82c.36-.091.947-.063%201.316.072zm4.12%203.918c.043.221%201.308%209.973%201.308%2010.093a.409.409%200%200%201-.104.22l-.1.11H.995l-.123-.134-.119-.13.678-5.132c.369-2.825.677-5.137.677-5.146.005-.005%202.197-.01%204.878-.01h4.873l.029.13z%22%20fill%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E');
+  width: 14px;
+  height: 16px;
+}
+
+.svg-head-cart-white {
+
+  &:before {
+    @include svg-head-cart-white;
   }
 }
 
@@ -271,6 +362,19 @@
   }
 }
 
+@mixin svg-contacts-head-5-arrow-white {
+  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%227%22%20viewBox%3D%220%200%2011%207%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1%201l4.5%204.504L10%201%22%20stroke%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E');
+  width: 11px;
+  height: 7px;
+}
+
+.svg-contacts-head-5-arrow-white {
+
+  &:before {
+    @include svg-contacts-head-5-arrow-white;
+  }
+}
+
 @mixin svg-contacts-head-5-arrow {
   background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%227%22%20viewBox%3D%220%200%2011%207%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1%201l4.5%204.504L10%201%22%20stroke%3D%22%23515855%22%2F%3E%3C%2Fsvg%3E');
   width: 11px;
@@ -281,32 +385,6 @@
 
   &:before {
     @include svg-contacts-head-5-arrow;
-  }
-}
-
-@mixin svg-contacts-head-5-phone-white {
-  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M22.908%2016.794l-4.26-4.26a2.177%202.177%200%200%200-3.08%200l-1.893%201.893-4.104-4.103%201.647-1.647a2.529%202.529%200%200%200%200-3.572L7.45%201.336a2.524%202.524%200%200%200-3.572%200l-2.22%202.22a5.67%205.67%200%200%200%200%208.01L12.432%2022.34a5.661%205.661%200%200%200%208.01%200l2.466-2.465a2.177%202.177%200%200%200%200-3.08zM5.022%202.48a.907.907%200%200%201%201.283%200l3.769%203.769a.909.909%200%200%201%200%201.283l-.503.503-5.052-5.052.503-.503zm14.276%2018.715a4.044%204.044%200%200%201-5.722%200L2.803%2010.422a4.05%204.05%200%200%201%200-5.722l.572-.572%205.052%205.051-.573.573a.81.81%200%200%200%200%201.144l5.248%205.248a.81.81%200%200%200%201.145%200l.572-.572%205.051%205.051-.572.572zm2.466-2.465l-.75.749-5.05-5.052.748-.748a.559.559%200%200%201%20.791%200l4.26%204.26a.56.56%200%200%201%200%20.791zM14.288%200a9.628%209.628%200%200%200-4.115.913.81.81%200%200%200%20.687%201.465%208.021%208.021%200%200%201%203.428-.76c4.462%200%208.092%203.63%208.092%208.093%200%201.033-.192%202.04-.57%202.99a.81.81%200%200%200%201.503.599A9.664%209.664%200%200%200%2024%209.71c0-5.354-4.357-9.71-9.711-9.71z%22%20fill%3D%22%23fff%22%2F%3E%3Cpath%20d%3D%22M13.205%203.326a.81.81%200%201%200%20.267%201.596c3.253-.545%206.08%202.224%205.622%205.477a.81.81%200%201%200%201.603.225c.612-4.351-3.18-8.021-7.492-7.298z%22%20fill%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E');
-  width: 24px;
-  height: 24px;
-}
-
-.svg-contacts-head-5-phone-white {
-
-  &:before {
-    @include svg-contacts-head-5-phone-white;
-  }
-}
-
-@mixin svg-contacts-head-5-phone {
-  background-image:url('data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M22.908%2016.794l-4.26-4.26a2.177%202.177%200%200%200-3.08%200l-1.893%201.893-4.104-4.103%201.647-1.647a2.529%202.529%200%200%200%200-3.572L7.45%201.336a2.524%202.524%200%200%200-3.572%200l-2.22%202.22a5.67%205.67%200%200%200%200%208.01L12.432%2022.34a5.661%205.661%200%200%200%208.01%200l2.466-2.465a2.177%202.177%200%200%200%200-3.08zM5.022%202.48a.907.907%200%200%201%201.283%200l3.769%203.769a.909.909%200%200%201%200%201.283l-.503.503-5.052-5.052.503-.503zm14.276%2018.715a4.044%204.044%200%200%201-5.722%200L2.803%2010.422a4.05%204.05%200%200%201%200-5.722l.572-.572%205.052%205.051-.573.573a.81.81%200%200%200%200%201.144l5.248%205.248a.81.81%200%200%200%201.145%200l.572-.572%205.051%205.051-.572.572zm2.466-2.465l-.75.749-5.05-5.052.748-.748a.559.559%200%200%201%20.791%200l4.26%204.26a.56.56%200%200%201%200%20.791zM14.288%200a9.628%209.628%200%200%200-4.115.913.81.81%200%200%200%20.687%201.465%208.021%208.021%200%200%201%203.428-.76c4.462%200%208.092%203.63%208.092%208.093%200%201.033-.192%202.04-.57%202.99a.81.81%200%200%200%201.503.599A9.664%209.664%200%200%200%2024%209.71c0-5.354-4.357-9.71-9.711-9.71z%22%20fill%3D%22%231D499B%22%2F%3E%3Cpath%20d%3D%22M13.205%203.326a.81.81%200%201%200%20.267%201.596c3.253-.545%206.08%202.224%205.622%205.477a.81.81%200%201%200%201.603.225c.612-4.351-3.18-8.021-7.492-7.298z%22%20fill%3D%22%231D499B%22%2F%3E%3C%2Fsvg%3E');
-  width: 24px;
-  height: 24px;
-}
-
-.svg-contacts-head-5-phone {
-
-  &:before {
-    @include svg-contacts-head-5-phone;
   }
 }
 
