--- a/local/src_v6/components/header/head-links/style.scss
+++ b/local/src_v6/components/header/head-links/style.scss
@@ -55,6 +55,13 @@ $head-links-padding-width-md:        5px;
 
         &:before {
           @include svg-head-links--search();
+
+          .main .header__desktop:not(.header__desktop--scroll) & {
+
+            @media (max-width: $screen-lg-max) {
+              @include svg-head-links--search-white();
+            }
+          }
         }
       }
     }
@@ -65,6 +72,13 @@ $head-links-padding-width-md:        5px;
 
         &:before {
           @include svg-head-links--cart();
+
+          .main .header__desktop:not(.header__desktop--scroll) & {
+
+            @media (max-width: $screen-lg-max) {
+              @include svg-head-links--cart-white();
+            }
+          }
         }
       }
     }
@@ -75,6 +89,13 @@ $head-links-padding-width-md:        5px;
 
         &:before {
           @include svg-head-links--favorites();
+
+          .main .header__desktop:not(.header__desktop--scroll) & {
+
+            @media (max-width: $screen-lg-max) {
+              @include svg-head-links--favorites-white();
+            }
+          }
         }
       }
     }
@@ -85,6 +106,13 @@ $head-links-padding-width-md:        5px;
 
         &:before {
           @include svg-head-links--human();
+
+          .main .header__desktop:not(.header__desktop--scroll) & {
+
+            @media (max-width: $screen-lg-max) {
+              @include svg-head-links--human-white();
+            }
+          }
         }
       }
     }
