--- a/local/src_v6/components/header/menu/menu-drop-8/style.scss
+++ b/local/src_v6/components/header/menu/menu-drop-8/style.scss
@@ -131,6 +131,10 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
         font-size: 14px;
       }
 
+      .main .header__desktop:not(.header__desktop--scroll) & {
+        color: $brand-white;
+      }
+
       > a:not(.icon),
       > span:not(.icon) {
         display: inline-block;
@@ -151,6 +155,10 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
           display: inline-block;
           @include svg();
           @include svg-menu-drop-8-arrow();
+
+          .main .header__desktop:not(.header__desktop--scroll) & {
+            @include svg-menu-drop-8-arrow-white();
+          }
         }
       }
     }
@@ -159,6 +167,10 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
 
       @include hover-focus() {
         color: $_menu-drop-8-color-hover;
+
+        .main .header__desktop:not(.header__desktop--scroll) & {
+          color: rgba($brand-white, .8);
+        }
       }
     }
 
@@ -167,12 +179,20 @@ $_menu-drop-8-submenu-bg:                  $body-bg-color;
       > a,
       > span {
         color: $_menu-drop-8-color-active;
+
+        .main .header__desktop:not(.header__desktop--scroll) & {
+          color: $brand-white;
+        }
       }
 
       > a {
 
         @include hover-focus() {
           color: $_menu-drop-8-color-active-hover;
+
+          .main .header__desktop:not(.header__desktop--scroll) & {
+            color: rgba($brand-white, .8);
+          }
         }
       }
     }
