--- a/local/src_v6/components/pages/brand/brand/style.scss
+++ b/local/src_v6/components/pages/brand/brand/style.scss
@@ -41,6 +41,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      min-height: 200px;
     }
 
     &--text {
