--- a/local/src_v6/pages/proj/index.pug
+++ b/local/src_v6/pages/proj/index.pug
@@ -16,4 +16,4 @@ block contentBottom
   include ../../components/footer/subscription/index
 block popup
   include ../../components/modals/fast-buy-modal/index
-  //include ../../components/modals/modal-buy/index
+  include ../../components/modals/modal-thanks/index
