--- a/local/templates/.default/index.html
+++ b/local/templates/.default/index.html
@@ -573,7 +573,7 @@
 																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
 																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">подробнее</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#thanksModal" href="#">подробнее</a>
 																							</div>
 																						</div>
 																					</div>
@@ -593,7 +593,7 @@
 																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
 																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">подробнее</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#thanksModal" href="#">подробнее</a>
 																							</div>
 																						</div>
 																					</div>
@@ -613,7 +613,7 @@
 																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
 																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">подробнее</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#thanksModal" href="#">подробнее</a>
 																							</div>
 																						</div>
 																					</div>
@@ -1926,7 +1926,17 @@
 					</div>
 				</div>
 			</div>
-			<!--include ../../components/modals/modal-buy/index-->
+			<div class="thanksModal modal fade vertical-center" id="thanksModal" tabindex="-1" role="dialog" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-centered">
+					<div class="modal-content">
+						<div class="modal-header">
+							<div class="h1 modal-title ta-center">Спасибо!<br>ваш заказ принят</div>
+							<button class="close" type="button" data-dismiss="modal" aria-hidden="true"></button>
+						</div>
+						<div class="modal-body">Заказ принят в обработку - в скором времени вам перезвонит менеджер для его подтверждения. Детали заказа можно просмотреть в <a href="#">личном кабинете</a>.</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
