--- a/local/templates/.default/_standart/examples/sliders.html
+++ b/local/templates/.default/_standart/examples/sliders.html
@@ -585,7 +585,7 @@
 																							<div class="h1 title">№1 на рынке веб-разработки и поискового маркетинга на протяжении 5 лет</div>
 																							<p class="text">№1 в Беларуси по версии marketing.by и №11 в СНГ по верcии CMSmagazine</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">Подробнее о компании</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" href="#">Подробнее о компании</a>
 																							</div>
 																						</div>
 																					</div>
@@ -622,7 +622,7 @@
 																							<div class="h1 title">Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование</div>
 																							<p class="text">Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">Подробнее о компании</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" href="#">Подробнее о компании</a>
 																							</div>
 																						</div>
 																					</div>
@@ -652,7 +652,7 @@
 																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
 																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">подробнее</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" href="#">подробнее</a>
 																							</div>
 																						</div>
 																					</div>
@@ -672,7 +672,7 @@
 																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
 																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">подробнее</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" href="#">подробнее</a>
 																							</div>
 																						</div>
 																					</div>
@@ -692,7 +692,7 @@
 																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
 																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">подробнее</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" href="#">подробнее</a>
 																							</div>
 																						</div>
 																					</div>
@@ -721,7 +721,7 @@
 																							<div class="h1 title">№1 на рынке веб-разработки и поискового маркетинга на протяжении 5 лет</div>
 																							<p class="text">№1 в Беларуси по версии marketing.by и №11 в СНГ по верcии CMSmagazine</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">Подробнее о компании</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" href="#">Подробнее о компании</a>
 																							</div>
 																						</div>
 																					</div>
@@ -758,7 +758,7 @@
 																							<div class="h1 title">Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование</div>
 																							<p class="text">Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">Подробнее о компании</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" href="#">Подробнее о компании</a>
 																							</div>
 																						</div>
 																					</div>
@@ -1634,7 +1634,7 @@
 																							<div class="h1 title">№1 на рынке веб-разработки и поискового маркетинга на протяжении 5 лет</div>
 																							<p class="text">№1 в Беларуси по версии marketing.by и №11 в СНГ по верcии CMSmagazine</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">Подробнее о компании</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" href="#">Подробнее о компании</a>
 																							</div>
 																						</div>
 																					</div>
@@ -1671,7 +1671,7 @@
 																							<div class="h1 title">Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование Лифты и лифтовое оборудование</div>
 																							<p class="text">Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования Наше предприятие осуществляет полный комплекс услуг по технической поддержке лифтового и поъемного оборудования</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" href="#">Подробнее о компании</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" href="#">Подробнее о компании</a>
 																							</div>
 																						</div>
 																					</div>
