--- a/local/src_v6/core/main/variables/style.scss
+++ b/local/src_v6/core/main/variables/style.scss
@@ -44,8 +44,8 @@ $brand-1:                           #080508;
 $brand-1-active:                    rgba($brand-1, .8);
 $brand-2:                           #515855;
 $brand-2-active:                    rgba($brand-2, .8);
-$brand-3:                           #57a801;
-$brand-3-active:                    #438101;
+$brand-3:                           #AD9685;
+$brand-3-active:                    darken($brand-3, 15%);
 
 $brand-success:                     #28a745;
 $brand-info:                        #17a2b8;
