--- a/local/src_v6/pages/proj/index.pug
+++ b/local/src_v6/pages/proj/index.pug
@@ -17,3 +17,4 @@ block contentBottom
 block popup
   include ../../components/modals/fast-buy-modal/index
   include ../../components/modals/modal-thanks/index
+  include ../../components/modals/modal-banner/index
