--- a/local/src_v6/components/bs_core/modal/style.scss
+++ b/local/src_v6/components/bs_core/modal/style.scss
@@ -29,7 +29,7 @@ $modal-footer-border-width:         $modal-header-border-width;
 $modal-header-padding:              1rem 3rem;
 
 $modal-lg:                          900px;
-$modal-md:                          1080px;
+$modal-md:                          1082px;
 $modal-sm:                          300px;
 
 $modal-transition:                  transform .3s ease-out;
@@ -46,6 +46,7 @@ $modal-transition:                  transform .3s ease-out;
   right: 0;
   bottom: 0;
   left: 0;
+  max-width: 100vw;
   z-index: $zindex-modal;
   display: none;
   overflow: hidden;
@@ -234,13 +235,100 @@ $modal-transition:                  transform .3s ease-out;
   }
 }
 
+.bannerModal {
+
+  .modal-body {
+    padding: 0;
+  }
+
+  .col-pic {
+    flex: 0 0 49.1%;
+  }
+
+  .col-text {
+    flex: 1 1 auto;
+    padding: 85px 50px 50px 50px;
+
+    @media (max-width: $screen-lg-max) {
+      padding: 69px 30px 50px 30px;
+    }
+
+    @media (max-width: $screen-md-max) {
+      padding: 60px 30px 38px 30px;
+    }
+
+    @media (max-width: $screen-sm-max) {
+      padding: 40px 30px 38px 30px;
+    }
+
+    @media (max-width: $screen-xs-max) {
+      padding: 40px 20px 38px 20px;
+    }
+  }
+
+  .text {
+    @include font-family-cormorant-r();
+    font-size: 30px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    color: $brand-gray-10;
+    margin-bottom: 30px;
+
+    @media (max-width: $screen-md-max) {
+      font-size: 24px;
+      margin-bottom: 15px;
+    }
+
+    @media (max-width: $screen-xs-max) {
+      font-size: 18px;
+    }
+
+    .with-big {
+      display: inline-block;
+      margin-top: -10px;
+    }
+
+    .big {
+      font-size: 47px;
+
+      @media (max-width: $screen-md-max) {
+        font-size: 35px;
+      }
+    }
+
+    .color {
+      color: $brand-3;
+    }
+
+    .btn {
+
+      @media (max-width: $screen-xs-max) {
+        padding: 13px 32px;
+      }
+    }
+  }
+
+  .close {
+    
+    @media (min-width: $screen-xl-min) {
+      top: 40px;
+      right: 45px;
+    }
+
+    @media (min-width: $screen-md-min) {
+      top: 30px;
+      right: 30px;
+    }
+  }
+}
+
 .thanksModal {
 
   .modal-dialog {
 
-    @media (min-width: $screen-sm-min) {
-      max-width: 862px;
-    }
+    //@media (min-width: $screen-sm-min) {
+    //  max-width: 862px;
+    //}
   }
 
   .modal-header {
