--- a/local/templates/.default/index.html
+++ b/local/templates/.default/index.html
@@ -573,7 +573,7 @@
 																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
 																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" data-toggle="modal" data-target="#thanksModal" href="#">подробнее</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#bannerModal" href="#">подробнее</a>
 																							</div>
 																						</div>
 																					</div>
@@ -593,7 +593,7 @@
 																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
 																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" data-toggle="modal" data-target="#thanksModal" href="#">подробнее</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#bannerModal" href="#">подробнее</a>
 																							</div>
 																						</div>
 																					</div>
@@ -1934,6 +1934,22 @@
 							<button class="close" type="button" data-dismiss="modal" aria-hidden="true"></button>
 						</div>
 						<div class="modal-body">Заказ принят в обработку - в скором времени вам перезвонит менеджер для его подтверждения. Детали заказа можно просмотреть в <a href="#">личном кабинете</a>.</div>
+					</div>
+				</div>
+			</div>
+			<div class="bannerModal modal fade vertical-center" id="bannerModal" tabindex="-1" role="dialog" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-body">
+							<button class="close" type="button" data-dismiss="modal" aria-hidden="true"></button>
+							<div class="d-flex">
+								<div class="col-pic d-none d-md-block"><img src="img/tmp/modal-banner.png" alt="alt"></div>
+								<div class="col-text">
+									<div class="text"><span>Первый раз на сайте?</span><br><br><span>Зарегистрируйтесь и</span><br><span class="with-big">получите <span class="color">скидку <span class="big">10%</span></span> на первую покупку</span></div>
+															<a class="btn btn-third" href="#">зарегистрироваться</a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
