--- a/local/src_v6/components/pages/index/sl-main/index.pug
+++ b/local/src_v6/components/pages/index/sl-main/index.pug
@@ -10,7 +10,7 @@ include ../../../sliders/nav/sl-nav-6/index
         title: 'сияйте этим летом с маслом flavia',
         text: 'Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.',
         btnText: 'подробнее',
-        btnTarget: '#bannerModal'
+        btnTarget: '#numModal'
       },
       {
         pic: 'sl-main-1.jpg',
