--- a/local/src_v6/pages/proj/index.pug
+++ b/local/src_v6/pages/proj/index.pug
@@ -18,3 +18,4 @@ block popup
   include ../../components/modals/fast-buy-modal/index
   include ../../components/modals/modal-thanks/index
   include ../../components/modals/modal-banner/index
+  include ../../components/modals/modal-num/index
