--- a/local/templates/.default/_standart/examples/index-pages/index-3.html
+++ b/local/templates/.default/_standart/examples/index-pages/index-3.html
@@ -573,7 +573,7 @@
 																							<div class="h1 title">сияйте этим летом с маслом flavia</div>
 																							<p class="text">Линия Capilo создана в 1937. Началось все с продукта Capillicure - первого лосьона от потери волос. Создание продукта было основано на исследовании, проведенном французскими дерматологами, которые впервые охарактеризовали различные типы алопеции.</p>
 																							<div class="btn-wrap">
-																																						<a class="btn btn-primary" data-toggle="modal" data-target="#bannerModal" href="#">подробнее</a>
+																																						<a class="btn btn-primary" data-toggle="modal" data-target="#numModal" href="#">подробнее</a>
 																							</div>
 																						</div>
 																					</div>
